Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- #292164 Keep calendar date selector description from floating out of block in IE.
- #298929 Fix code so that calendar legend doesn't display empty div when empty.
- Make some fixes to the calendar legend to be sure text added for accessibility stays invisible in all themes.
- #321831 Make sure day view gets populated.
- Rework html of Year view so month titles will match block view month title for easier css themeing.
- #319344 Add 'empty' class and updated css styles provided by MothersClick.com.
- #319344 Add method of truncating title and other fields in calendar cells.
- #174580 Add rel=nofollow to back/next links.
- #319344 Add method of limiting the number of events that display in calendar cells.
- #290365 Add upcoming events block to default calendar so both the mini calendar and an upcoming events calendar are available blocks.
- #289166 Change ical link in default calendar to 'all time' link instead of single period.
- #315843 Make sure there is validation to keep you from trying to group multiple date values in the calendar.

Version 2.0 rc3
=================

- Change the jcalendar code to use the new display_ids.
- Make it possible to expose the calendar parts in the UI. To make this work better, combine year, month, day, and week handlers into a single handler.
- #311485 Make sure mini calendar has the right number of columns if using week number.
- #317660 Hard code line feeds in ical export to be sure they come through correctly in all systems.
- Start adding in Advanced help for the calendar.
- Move the colorpicker js info to the plugin so it isn't loaded everywhere.
- #314682 Add missing url() in jcalendar js code.
- #315955 Translation cleanup.
- Get colorpicker working in the Views UI again. I'm not loading the js in the best place, but at least it works now.