@@ -33,6 +33,7 @@ class calendar_plugin_display_page extends views_plugin_display_page {
    */
   function init(&$view, &$display) {
     parent::init($view, $display);
+    $view->calendar_popup = $this->get_option('calendar_popup');
   }
   
   function get_style_type() { return 'calendar'; }
@@ -59,8 +60,8 @@ class calendar_plugin_display_page extends views_plugin_display_page {
   
   function option_definition () {
     $options = parent::option_definition();
-
     $options['calendar_colors'] = array();
+    $options['calendar_popup'] = 0;
     $options['style_plugin'] = 'calendar_nav';
     return $options;
   }
@@ -84,6 +85,16 @@ class calendar_plugin_display_page extends views_plugin_display_page {
       'title' => theme('advanced_help_topic', 'calendar', 'settings') . t('Legend colors'),
       'value' => t('Edit'),
     );
+    $popup_options = $this->popup_options();
+    $options['calendar_popup'] = array(
+      'category' => 'calendar_settings',
+      'title' => theme('advanced_help_topic', 'calendar', 'settings') . t('Calendar popup'),
+      'value' => $popup_options[$this->get_option('calendar_popup')],
+    );
+  }
+  
+  function popup_options() {
+    return array(0 => t('No'), 1 => t('Yes'));
   }
    
   function options_form(&$form, &$form_state) {
@@ -91,38 +102,46 @@ class calendar_plugin_display_page extends views_plugin_display_page {
     parent::options_form($form, $form_state);
        
     switch ($form_state['section']) {
+      case 'calendar_popup':
+        $form['#title'] .= t('Calendar popup');
+        $form['calendar_popup'] = array(
+          '#type' => 'radios',
+          '#default_value' => $this->get_option('calendar_popup'),
+          '#options' => $this->popup_options(),
+          '#desription' => t('Display a popup calendar date selector.'),
+          );        
+        break;
+      
       case 'calendar_colors':
-
-      $method =  'types';
-  
-      // TODO Move the embedded styles other than the color into a stylesheet.
-      $form['#title'] .= t('Legend colors');
-      $form['calendar_colors']['#tree'] = TRUE;
-      $form['calendar_colors']['#prefix'] = t('<div class="form-item"><label>Content Type</label><p>Set a hex color value (like #ffffff) to use in the calendar legend for each content type. Types with empty values will have no stripe in the calendar and will not be added to the legend.</p></div>');
-      $form['calendar_colors']['colorpicker'] = array(
-         '#type' => 'calendar_colorpicker',
-         '#prefix' => '<div class="clear-block"><div style="float:left">',
-         '#suffix' => '</div>',
-       );
-       $colors = $this->get_option('calendar_colors'); 
-
-       switch ($method) {
-         case 'types':
-           $color_types = node_get_types('names');
-           break;
-       }
-       foreach ($color_types as $key => $name) {
-         $form['calendar_colors']['color'][$key] = array(
-           '#title' => $name,
-           '#type' => 'calendar_colorfield',
-           '#default_value' => isset($colors[$key]) ? $colors[$key] : '#ffffff',
-           '#calendar_colorpicker' => 'calendar-colors-colorpicker',
-           '#prefix' => '<div style="float:left;margin-right:10px">',
+        $method =  'types';
+        // TODO Move the embedded styles other than the color into a stylesheet.
+        $form['#title'] .= t('Legend colors');
+        $form['calendar_colors']['#tree'] = TRUE;
+        $form['calendar_colors']['#prefix'] = t('<div class="form-item"><label>Content Type</label><p>Set a hex color value (like #ffffff) to use in the calendar legend for each content type. Types with empty values will have no stripe in the calendar and will not be added to the legend.</p></div>');
+        $form['calendar_colors']['colorpicker'] = array(
+           '#type' => 'calendar_colorpicker',
+           '#prefix' => '<div class="clear-block"><div style="float:left">',
            '#suffix' => '</div>',
          );
-       }
-       $form['calendar_colors']['color']['#suffix'] = '</div>';
-       break;
+         $colors = $this->get_option('calendar_colors'); 
+
+         switch ($method) {
+           case 'types':
+             $color_types = node_get_types('names');
+             break;
+         }
+         foreach ($color_types as $key => $name) {
+           $form['calendar_colors']['color'][$key] = array(
+             '#title' => $name,
+             '#type' => 'calendar_colorfield',
+             '#default_value' => isset($colors[$key]) ? $colors[$key] : '#ffffff',
+             '#calendar_colorpicker' => 'calendar-colors-colorpicker',
+             '#prefix' => '<div style="float:left;margin-right:10px">',
+             '#suffix' => '</div>',
+           );
+         }
+         $form['calendar_colors']['color']['#suffix'] = '</div>';
+         break;
     }
   }
 
@@ -134,6 +153,9 @@ class calendar_plugin_display_page extends views_plugin_display_page {
     // It is very important to call the parent function here:
     parent::options_submit($form, $form_state);
     switch ($form_state['section']) {
+      case 'calendar_popup':
+        $this->set_option($form_state['section'], $form_state['values'][$form_state['section']]['popup']);
+        break;
       case 'calendar_colors':
         $this->set_option($form_state['section'], $form_state['values'][$form_state['section']]['color']);
         break;
