@@ -6,6 +6,7 @@ See documentation at http://drupal.org/node/262064.
 Version 2.0 dev
 =================
 
+- Add the popup calendar date selector back into the D6 version.
 - #292164 Keep calendar date selector description from floating out of block in IE.
 - #298929 Fix code so that calendar legend doesn't display empty div when empty.
 - Make some fixes to the calendar legend to be sure text added for accessibility stays invisible in all themes.
